<resources>
    <string name="app_name">SpendSense</string>
    <string name="add_expenses">Add Expense</string>
    <string name="enter_the_amount">Enter the Amount</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="amount">Amount</string>
    <string name="content">Content</string>
    <string name="expenses">Your Expenses</string>
    <string name="edit_expenses">UPDATE</string>
    <string name="date">Date</string>
    <string name="enter_the_date">Enter the date</string>
    <string name="tracking_expenses_with_just_a_quick_glance_">Tracking expenses with just a quick glance</string>
    <string name="spend_sense">Spend Sense</string>
    <string name="created_by_nisalka">Created By Nisalka</string>
    <string name="ddmmyyyy">DDMMYYYY</string>
</resources>